welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:4: error: illegal start of simple expression
	if (a%(3)==0)
        ^